# itabashi

./: .env.example  .gitignore  README.md  pyproject.toml
itabashi/: __init__.py  cache.py  display.py  http.py  lastfm.py  lyrics.py  models.py  renderer.py  scheduler.py  service.py
tests/: test_config.py  test_display.py  test_lastfm.py  test_lyrics.py  test_renderer.py  test_scheduler.py
