[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itabashi"
version = "0.1.0"
description = "Live lyrics e-ink display for Last.fm and Pimoroni Inky/Spectra"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "inky>=1.5",
    "lyricsgenius>=3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
itabashi = "itabashi.service:main"
itabashi-dry-run = "itabashi.service:dry_run_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
